Tidy up SchemaGenerator